--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@wasm-tool/wasm-pack-plugin": "0.2.7",
     "clean-webpack-plugin": "^2.0.2",
     "elm-hot-webpack-loader": "^1.0.2",
-    "elm-webpack-loader": "^5.0.0",
+    "elm-webpack-loader": "lgfrbcsgo/elm-webpack-loader#remove-elm",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.0.0",
